# cognitia

./: DEV.md  Guidelines.md  Readme.md  distortion_seed.md  start.bat
backend/: cognitia.db  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  daily_mood.py  distortion.py  emotion.py  entry.py  feedback.py  settings.py  winning_moment.py
backend/app/routers/: analytics.py  distortions.py  emotions.py  entries.py  feedback.py  mood.py  reframes.py  settings.py  wins.py
backend/app/schemas/: analytics.py  daily_mood.py  distortion.py  emotion.py  entry.py  feedback.py  reframe.py  settings.py  winning_moment.py
backend/app/seed/: distortions.py  emotions.py  settings.py
backend/app/services/: analytics.py  pdf.py
backend/cognitia_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/dashboard/: MoodCheckInCard.tsx  ReframeLibraryCard.tsx  WeeklyPatternCard.tsx
frontend/src/components/entry/: EntryStepper.tsx  StepActivating.tsx  StepBelief.tsx  StepConsequences.tsx  StepDistortions.tsx  StepTesting.tsx  TherapistFeedbackSection.tsx
frontend/src/lib/: api.ts  i18n.ts  utils.ts
frontend/src/locales/: en.json  id.json
frontend/src/pages/: Dashboard.tsx  EntryDetail.tsx  EntryList.tsx  Insights.tsx  NewEntry.tsx  ReframeLibrary.tsx  Settings.tsx  Wins.tsx
frontend/src/stores/: uiStore.ts
(+2 files in other folders)
